{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerMain",
            "id": "bd49f786-22d1-415b-8267-96fb4340991b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "8d99f39f-ad3e-4f3f-8751-936f84c0e0d9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8ee374c1-2143-4f99-a97c-ac5ebb0aa38c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomInCameraMinimap",
                    "type": "Button",
                    "id": "9570661f-1fed-46ed-bcbf-48e71de41420",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomOutCameraMinimap",
                    "type": "Button",
                    "id": "8644fe29-7d30-41ed-bd27-19db7ec0803a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "5b5eef65-0771-4dde-91cd-a3d1c0834e3d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LookCam",
                    "type": "Value",
                    "id": "dc14db2f-b828-490a-bf5a-c8dfb5dfbf5b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "9dd4c2a3-77ea-400e-8046-b59aab6190dc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LoockCam",
                    "type": "Button",
                    "id": "58696d2b-e656-4121-905d-df868fd71d7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1b0bade3-29a2-40ad-87fb-ed907d5d0ca6",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "f2d52be5-5ecb-40ad-a30d-8bf08f32e1dc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1c1b1366-a044-4ed5-bb7e-01286a34a623",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3acc3ac3-7391-4afa-a576-9601edb7a24a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "49e95948-4f13-4347-8eda-07cc39118b75",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "eae13684-7a90-4f0f-bccc-2c4b8344fcc3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d522fa2e-a021-450b-a281-67727c99b45f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8dc1abe-7404-4a26-a835-804aa971ec0b",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomInCameraMinimap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3694af94-255d-4533-949e-2433f5d51b0a",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomOutCameraMinimap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "338ef235-b787-409f-964a-66653828310a",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac5c4b38-f992-495d-b449-ef51b8d6eae5",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c59639f-e169-49d6-beba-e0d1c7f6767f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f291dc5-e1e1-48c2-ab87-a3beddae636d",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a4e1f1d-635d-4c21-8a10-d95ad0748773",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LoockCam",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ChangePerspective",
            "id": "b27c62f6-6371-4b1f-b733-e56d9d9a7987",
            "actions": [
                {
                    "name": "PerspectiveThirdPerson",
                    "type": "Button",
                    "id": "be31f213-c0bd-49eb-9c1e-15c2b22f1827",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PerspectiveFirstPerson",
                    "type": "Button",
                    "id": "c267cd22-2b65-4ebe-a0a4-db8ed30fb6b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3cbd9d7b-d567-41d2-9ead-4a447b4638b1",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PerspectiveThirdPerson",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8b8c96b-3985-4532-b118-62705be8086a",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PerspectiveFirstPerson",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Minimap",
            "id": "caa7a9f1-2ec9-4303-b5e0-319c83c02367",
            "actions": [
                {
                    "name": "OpenCloseMinimap",
                    "type": "Button",
                    "id": "39a44b18-dab9-41d3-8f6c-97439ec2594d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4398b73f-14b7-4c02-9e16-2ee7ca936991",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseMinimap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "a3b66b57-935d-45be-b415-67b2276874cc",
            "actions": [
                {
                    "name": "OpenCloseInventory",
                    "type": "Button",
                    "id": "b6879603-ecba-47d2-afe7-2b7176dec998",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fc193c32-b47a-4bef-a4ae-52d84f8359d0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}